--- a/data_blitz/index.html
+++ b/data_blitz/index.html
@@ -451,14 +451,14 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <section>
     <h1 class="title">Reusing Video</h1>
     <h2 class="author">Rick Gilmore (databrary.org)</h2>
-    <h3 class="date">2018-10-04 08:04:04</h3>
+    <h3 class="date">2018-10-04 08:07:40</h3>
 </section>
 
 <section><section id="re-use-video-data" class="titleslide slide level1"><h1>Re-use video data</h1></section><section class="slide level2">
 
 <!-- Databrary splash loop -->
 <div class="centered">
-<video width="900" controls autoplay loop>
+<video width="900" controls data-autoplay loop>
 <source src="../mov/databrary-splash.mp4" type="video/mp4"> Your browser does not support the video tag.
 </video>
 </div>
