--- a/promise-of-open-dev-sci/index.html
+++ b/promise-of-open-dev-sci/index.html
@@ -451,7 +451,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <section>
     <h1 class="title">The promise of open developmental science</h1>
     <h2 class="author">Rick O. Gilmore</h2>
-    <h3 class="date">2018-10-05 03:31:53</h3>
+    <h3 class="date">2018-10-05 05:29:03</h3>
 </section>
 
 <section class="slide level2">
@@ -684,6 +684,14 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <li>Without <em>quid pro quo</em>, pre-approval, or requirement of co-authorship</li>
 <li><em>With</em> expectation of ethical use <strong>AND</strong> proper citation</li>
 </ul>
+</section><section id="play-learning-across-a-year-play-project" class="slide level2">
+<h2>Play &amp; Learning Across a Year (PLAY) Project</h2>
+<div class="centered">
+<video width="700" data-autoplay>
+<source src="https://nyu.databrary.org/slot/27087/0,79000/asset/119877/download?inline=true" type="video/mp4"> Your browser does not support the video tag.
+</video>
+<p><span class="math inline">\(n=900\)</span> 12-, 18-, 24-mo-olds; <span class="math inline">\(n=30\)</span> sites</p>
+<p><strong>Hiring Research Scientists (PhD/ABD):</strong> <a href="http://apply.interfolio.com/54828" class="uri">http://apply.interfolio.com/54828</a></p>
 </section><section class="slide level2">
 
 <p><img src="https://static01.nyt.com/images/2012/04/01/sunday-review/01GRAY/01GRAY-jumbo.jpg" height=550px/></p>
@@ -709,15 +717,15 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <p><img src="https://cdn.shopify.com/s/files/1/0212/6252/products/Screen_Shot_2015-03-31_at_5.10.12_PM_large.png?v=1427892157" height=550px/></p>
 </section><section class="slide level2">
 
-<video width="600" loop data-autoplay>
+<video width="800" loop data-autoplay>
 <source src="../mov/databrary-splash.mp4" type="video/mp4">
 </video>
 <p><a href="mailto:rogilmore@psu.edu">rogilmore@psu.edu</a></p>
 <p><a href="https://gilmore-lab.github.io" class="uri">https://gilmore-lab.github.io</a></p>
-<p><a href="https://github.com/gilmore-lab/DEVSEC2018/promise-of-open-dev-sci/" class="uri">https://github.com/gilmore-lab/DEVSEC2018/promise-of-open-dev-sci/</a></p>
+<p><a href="https://gilmore-lab.github.io/DEVSEC-2018/promise-of-open-dev-sci/" class="uri">https://gilmore-lab.github.io/DEVSEC-2018/promise-of-open-dev-sci/</a></p>
 </section><section class="slide level2">
 
-<p>This talk was produced on 2018-10-05 03:31:53 in <a href="http://rstudio.com">RStudio 1.1.453</a> using R Markdown and the reveal.JS framework. The code and materials used to generate the slides may be found at <a href="https://github.com/gilmore-lab/DEVSEC2018/promise-of-open-dev-sci/" class="uri">https://github.com/gilmore-lab/DEVSEC2018/promise-of-open-dev-sci/</a>. Information about the R Session that produced the slides is as follows:</p>
+<p>This talk was produced on 2018-10-05 05:29:03 in <a href="http://rstudio.com">RStudio 1.1.453</a> using R Markdown and the reveal.JS framework. The code and materials used to generate the slides may be found at <a href="https://github.com/gilmore-lab/DEVSEC-2018/promise-of-open-dev-sci/" class="uri">https://github.com/gilmore-lab/DEVSEC-2018/promise-of-open-dev-sci/</a>. Information about the R Session that produced the slides is as follows:</p>
 </section><section class="slide level2">
 
 <pre><code>## R version 3.5.1 (2018-07-02)
