Add search, spreadsheet vids

--- a/promise-of-open-dev-sci/index.html
+++ b/promise-of-open-dev-sci/index.html
@@ -451,7 +451,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <section>
     <h1 class="title">The promise of open developmental science</h1>
     <h2 class="author">Rick O. Gilmore</h2>
-    <h3 class="date">2018-10-05 05:29:03</h3>
+    <h3 class="date">2018-10-05 10:10:49</h3>
 </section>
 
 <section class="slide level2">
@@ -562,13 +562,13 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <blockquote>
 <p>“<em>…psychologists tend to treat other peoples’ theories like toothbrushes; no self-respecting individual wants to use anyone else’s.</em>”</p>
 </blockquote>
-<p>(Mischel, 2009)</p>
+<p><a href="https://www.psychologicalscience.org/observer/becoming-a-cumulative-science">(Mischel, 2009)</a></p>
 </section><section class="slide level2">
 
 <blockquote>
 <p>“<em>The toothbrush culture undermines the building of a genuinely cumulative science, encouraging more parallel play and solo game playing, rather than building on each other’s directly relevant best work.</em>”</p>
 </blockquote>
-<p>(Mischel, 2009)</p>
+<p><a href="https://www.psychologicalscience.org/observer/becoming-a-cumulative-science">(Mischel, 2009)</a></p>
 </section></section>
 <section><section id="share-not-your-toothbrush" class="titleslide slide level1"><h1>Share not your toothbrush…</h1></section><section id="but-do-share" class="slide level2">
 <h2>But do share…</h2>
@@ -652,6 +652,16 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <h2>How</h2>
 <p><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/aa/FAIR_data_principles.jpg/800px-FAIR_data_principles.jpg"/></p>
 <p>Wilkinson, M. D., Dumontier, M., Aalbersberg, I. J. J., Appleton, G., Axton, M., Baak, A., Blomberg, N., et al. (2016). The FAIR Guiding Principles for scientific data management and stewardship. Scientific data, 3, 160018. Retrieved from <a href="http://dx.doi.org/10.1038/sdata.2016.18" class="uri">http://dx.doi.org/10.1038/sdata.2016.18</a></p>
+</section><section class="slide level2">
+
+<video data-autoplay>
+<source src="../mov/databrary-spreadsheet.mp4" type="video/mp4"> Your browser does not support the video tag.
+</video>
+</section><section class="slide level2">
+
+<video data-autoplay>
+<source src="../mov/databrary-search-hires.mp4" type="video/mp4"> Your browser does not support the video tag.
+</video>
 </section><section id="share-ethically" class="slide level2">
 <h2>Share ethically</h2>
 <ul>
@@ -665,6 +675,12 @@ document.getElementsByTagName('head')[0].appendChild(style);
 
 <p><img src="../img/databrary-release.jpg"/></p>
 <p><a href="https://www.databrary.org/resources/guide/investigators/release/release-levels.html" class="uri">https://www.databrary.org/resources/guide/investigators/release/release-levels.html</a></p>
+</section><section class="slide level2">
+
+<video data-autoplay>
+<source src="https://www.databrary.org/video/example-video-1.mp4" type="video/mp4"> Your browser does not support the video tag.
+</video>
+<p><a href="https://www.databrary.org/resources/guide/investigators/release/asking/examples.html" class="uri">https://www.databrary.org/resources/guide/investigators/release/asking/examples.html</a></p>
 </section><section class="slide level2">
 
 <ul>
@@ -725,7 +741,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <p><a href="https://gilmore-lab.github.io/DEVSEC-2018/promise-of-open-dev-sci/" class="uri">https://gilmore-lab.github.io/DEVSEC-2018/promise-of-open-dev-sci/</a></p>
 </section><section class="slide level2">
 
-<p>This talk was produced on 2018-10-05 05:29:03 in <a href="http://rstudio.com">RStudio 1.1.453</a> using R Markdown and the reveal.JS framework. The code and materials used to generate the slides may be found at <a href="https://github.com/gilmore-lab/DEVSEC-2018/promise-of-open-dev-sci/" class="uri">https://github.com/gilmore-lab/DEVSEC-2018/promise-of-open-dev-sci/</a>. Information about the R Session that produced the slides is as follows:</p>
+<p>This talk was produced on 2018-10-05 10:10:49 in <a href="http://rstudio.com">RStudio 1.1.453</a> using R Markdown and the reveal.JS framework. The code and materials used to generate the slides may be found at <a href="https://github.com/gilmore-lab/DEVSEC-2018/promise-of-open-dev-sci/" class="uri">https://github.com/gilmore-lab/DEVSEC-2018/promise-of-open-dev-sci/</a>. Information about the R Session that produced the slides is as follows:</p>
 </section><section class="slide level2">
 
 <pre><code>## R version 3.5.1 (2018-07-02)
