--- a/promise-of-open-dev-sci/index.html
+++ b/promise-of-open-dev-sci/index.html
@@ -451,14 +451,14 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <section>
     <h1 class="title">The promise of open developmental science</h1>
     <h2 class="author">Rick O. Gilmore</h2>
-    <h3 class="date">2018-10-05 13:23:13</h3>
+    <h3 class="date">2018-10-05 14:57:49</h3>
 </section>
 
 <section class="slide level2">
 
+<p><strong>Rick Gilmore</strong> (Penn State/Databrary), “The Promise of Open Developmental Science”</p>
 <p><strong>Anne Mastergeorge</strong> (Texas Tech University), “An analysis of the association between brain gray matter volumes and working memory in children with autism spectrum disorder”</p>
 <p><strong>Melissa Kline</strong> (MIT), “ManyBabies - Using Larg(er) Experimental Datasets for Methodological and Theoretical Questions”</p>
-<p><strong>Rick Gilmore</strong> (Penn State/Databrary), “The Promise of Open Developmental Science”</p>
 </section>
 <section class="slide level2">
 
@@ -747,7 +747,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <p><a href="https://gilmore-lab.github.io/DEVSEC-2018/promise-of-open-dev-sci/" class="uri">https://gilmore-lab.github.io/DEVSEC-2018/promise-of-open-dev-sci/</a></p>
 </section><section class="slide level2">
 
-<p>This talk was produced on 2018-10-05 13:23:14 in <a href="http://rstudio.com">RStudio 1.1.453</a> using R Markdown and the reveal.JS framework. The code and materials used to generate the slides may be found at <a href="https://github.com/gilmore-lab/DEVSEC-2018/promise-of-open-dev-sci/" class="uri">https://github.com/gilmore-lab/DEVSEC-2018/promise-of-open-dev-sci/</a>. Information about the R Session that produced the slides is as follows:</p>
+<p>This talk was produced on 2018-10-05 14:57:49 in <a href="http://rstudio.com">RStudio 1.1.453</a> using R Markdown and the reveal.JS framework. The code and materials used to generate the slides may be found at <a href="https://github.com/gilmore-lab/DEVSEC-2018/promise-of-open-dev-sci/" class="uri">https://github.com/gilmore-lab/DEVSEC-2018/promise-of-open-dev-sci/</a>. Information about the R Session that produced the slides is as follows:</p>
 </section><section class="slide level2">
 
 <pre><code>## R version 3.5.1 (2018-07-02)
@@ -755,7 +755,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 ## Running under: macOS Sierra 10.12.6
 ## 
 ## Matrix products: default
-## BLAS: /Library/Frameworks/R.framework/Versions/3.5/Resources/lib/libRblas.0.dylib
+## BLAS: /System/Library/Frameworks/Accelerate.framework/Versions/A/Frameworks/vecLib.framework/Versions/A/libBLAS.dylib
 ## LAPACK: /Library/Frameworks/R.framework/Versions/3.5/Resources/lib/libRlapack.dylib
 ## 
 ## locale:
@@ -769,7 +769,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 ## 
 ## loaded via a namespace (and not attached):
 ##  [1] compiler_3.5.1  backports_1.1.2 magrittr_1.5    rprojroot_1.3-2
-##  [5] tools_3.5.1     htmltools_0.3.6 yaml_2.2.0      Rcpp_0.12.18   
+##  [5] htmltools_0.3.6 tools_3.5.1     yaml_2.2.0      Rcpp_0.12.18   
 ##  [9] stringi_1.2.4   rmarkdown_1.10  knitr_1.20      stringr_1.3.1  
 ## [13] digest_0.6.16   evaluate_0.11</code></pre>
 </section></section>
