Delete Soderstrom video link

--- a/promise-of-open-dev-sci/index.html
+++ b/promise-of-open-dev-sci/index.html
@@ -451,7 +451,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <section>
     <h1 class="title">The promise of open developmental science</h1>
     <h2 class="author">Rick O. Gilmore</h2>
-    <h3 class="date">2018-10-05 14:57:49</h3>
+    <h3 class="date">2018-10-07 08:34:30</h3>
 </section>
 
 <section class="slide level2">
@@ -602,12 +602,12 @@ document.getElementsByTagName('head')[0].appendChild(style);
 </video>
 <p></br> Adolph, K. (2014). Excerpt Volume: Learning in the development of infant locomotion. Databrary. Retrieved October 5, 2018 from <a href="http://doi.org/10.17910/B7BC7T" class="uri">http://doi.org/10.17910/B7BC7T</a></p>
 <!-- Rich behavioral measures tell a rich story -->
-</section><section class="slide level2">
-
-<video width="800" controls data-autoplay>
-<source src="https://nyu.databrary.org/slot/21794/0,407508/asset/108263/download?inline=true" type="video/mp4"> Your browser does not support the video tag.
-</video>
-<p>Soderstrom, M. &amp; Klassen, K. (2017). ManyBabies 1: bll-umanitoba. Databrary. Retrieved October 4, 2018 from <a href="http://doi.org/10.17910/B7.445" class="uri">http://doi.org/10.17910/B7.445</a></p>
+<!-- --- -->
+<!-- <video width="800" controls data-autoplay> -->
+<!--   <source src="https://nyu.databrary.org/slot/21794/0,407508/asset/108263/download?inline=true" type="video/mp4"> -->
+<!-- Your browser does not support the video tag. -->
+<!-- </video> -->
+<!-- Soderstrom, M. & Klassen, K. (2017). ManyBabies 1: bll-umanitoba. Databrary. Retrieved October 4, 2018 from http://doi.org/10.17910/B7.445 -->
 </section><section id="where" class="slide level2">
 <h2>Where</h2>
 <ul>
@@ -747,7 +747,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <p><a href="https://gilmore-lab.github.io/DEVSEC-2018/promise-of-open-dev-sci/" class="uri">https://gilmore-lab.github.io/DEVSEC-2018/promise-of-open-dev-sci/</a></p>
 </section><section class="slide level2">
 
-<p>This talk was produced on 2018-10-05 14:57:49 in <a href="http://rstudio.com">RStudio 1.1.453</a> using R Markdown and the reveal.JS framework. The code and materials used to generate the slides may be found at <a href="https://github.com/gilmore-lab/DEVSEC-2018/promise-of-open-dev-sci/" class="uri">https://github.com/gilmore-lab/DEVSEC-2018/promise-of-open-dev-sci/</a>. Information about the R Session that produced the slides is as follows:</p>
+<p>This talk was produced on 2018-10-07 08:34:31 in <a href="http://rstudio.com">RStudio 1.1.453</a> using R Markdown and the reveal.JS framework. The code and materials used to generate the slides may be found at <a href="https://github.com/gilmore-lab/DEVSEC-2018/promise-of-open-dev-sci/" class="uri">https://github.com/gilmore-lab/DEVSEC-2018/promise-of-open-dev-sci/</a>. Information about the R Session that produced the slides is as follows:</p>
 </section><section class="slide level2">
 
 <pre><code>## R version 3.5.1 (2018-07-02)
@@ -755,7 +755,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 ## Running under: macOS Sierra 10.12.6
 ## 
 ## Matrix products: default
-## BLAS: /System/Library/Frameworks/Accelerate.framework/Versions/A/Frameworks/vecLib.framework/Versions/A/libBLAS.dylib
+## BLAS: /Library/Frameworks/R.framework/Versions/3.5/Resources/lib/libRblas.0.dylib
 ## LAPACK: /Library/Frameworks/R.framework/Versions/3.5/Resources/lib/libRlapack.dylib
 ## 
 ## locale:
@@ -769,7 +769,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 ## 
 ## loaded via a namespace (and not attached):
 ##  [1] compiler_3.5.1  backports_1.1.2 magrittr_1.5    rprojroot_1.3-2
-##  [5] htmltools_0.3.6 tools_3.5.1     yaml_2.2.0      Rcpp_0.12.18   
+##  [5] tools_3.5.1     htmltools_0.3.6 yaml_2.2.0      Rcpp_0.12.18   
 ##  [9] stringi_1.2.4   rmarkdown_1.10  knitr_1.20      stringr_1.3.1  
 ## [13] digest_0.6.16   evaluate_0.11</code></pre>
 </section></section>
